# libLSDJ

./: CMakeLists.txt
.github/workflows/: build_and_test.yml
liblsdj/include/lsdj/: song.h
liblsdj/src/: song.c
lsdj2txt/: CMakeLists.txt  main.cpp
songdecom/: CMakeLists.txt  main.cpp
